# IoT-Sensor-Framework

./: .gitignore  README.md  git.sh  pyproject.toml  setup.sh
azfunc/: .funcignore  README.md  SensorData.py  alert_system.py  az.txt  db.py  exec.sh  function_app copy.py  function_app.py  function_app_backup.py  hello_function.py  mock_db.py  performance_test.py  requirements.txt  sensor_data_function.py  statistics_function.py  x.py
cwk-02/: README.md
cwk-02/azfunc/: .funcignore  exec.sh  function_app backup.py  function_app.py  local.settings.json  performance_test.py  sensor_data_function.py  setup.sh  statistics_function.py
cwk-02/java-db/: QueryDB.java  build.sh  config.properties
cwk-02/java-db-setup/: CreateDB.java  QueryDB.java
flask-restful/: README.md  api.py  pyproject.toml
java-db/: CreateDB.java
java-db-setup/: CreateDB.java  build.sh
labs/flask-restful/: az.txt
labs/mpi-intro/: bcast.c  build.sh  qsort.c  ring.c
labs/multi-threading/: with-threads.py
labs/network-programming/: OReillyByAddress.java
labs/remote-databasing/jdbc/: CreateDB.java  QueryDB.java  (+1 more)
mpi-intro/: README  build.sh  hello  hello.c  hosts.txt  ring
multi-threading/: no-threads.py  with-threads.py
network-programming/: EchoClient.java  EchoServer.java  HostLookup.java  MyAddress.java  OReillyByName.java
remote-databasing/: az.txt
remote-databasing/jdbc/: CreateDB.java  QueryDB.java  config.properties
socket-programming/ex-02/: udp_time_client.py
socket-programming/ex-04/: TCPServer.java
socket-programming/ex-05/: UDPClient.java  UDPServer.java
(+7 files in other folders)
