[project]
name = "comp3211"
version = "0.1.0"
description = ""
authors = [
    {name = "scAB1001",email = "sc222ab@leeds.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-restful (>=0.3.10,<0.4.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "whoosh (>=2.7.4,<3.0.0)",
    "wtforms (>=3.2.1,<4.0.0)",
    "babel (>=2.17.0,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "azure-functions (>=1.24.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
