[project]
name = "flask-restful"
version = "0.1.0"
description = ""
authors = [
    {name = "Andreas Bazigos",email = "sc222ab@leeds.ac.uk"}
]
package-mode = false
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask",
    "flask-sqlalchemy",
    "sqlalchemy",
    "jinja2",
    "werkzeug",
    "whoosh",
    "wtforms",
    "babel",
    "alembic",
    "email-validator"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

